# torch-bioplnn-dev

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.MD  README.md  all_layer_modulation_pseudocode.txt  api_calls.py  config.yaml  download_clevr.sh  factors_color.pt  factors_conjunction.pt  factors_shape.pt  helpful_commands.sh  index.html  jupyter.out  jupyter.sh  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_cpu.txt  ruff.toml  sitemap.xml  test.ipynb  test_basic.py  test_wandb.py  tester.sh  trainer.sh
benchmarks/: plots_kwargs.yaml  spmm_test.ipynb
config/: config.yaml  config_ei.yaml  config_ei_1.yaml  config_ei_2.yaml  config_ei_test.yaml  config_random.yaml  config_topography_random.yaml
connection/: V1_indices.pt  V2_indices.pt  V3_indices.npy  V3_indices.pt  V3_indices_flat.pt  V4_indices.pt  V4_indices_flat.pt
connectivity/: V1_indices.npy  V1_indices_flat.pt  V2_indices.npy  V2_indices.pt  V4_indices.npy  V4_indices.pt  fb_adjacency.pt  initial_layer.npy  sparse.npz  sparse.pt
deprecated/: corrrelated_dots_gif.ipynb  dynamics.ipynb  post_processing_activations.ipynb  visualization.py  visualize_activations.py
docs/: api_calls.py  index.md  install.md
dont_touch/: create_connectivity.ipynb  crnn_visualizations.ipynb
examples/: activations.py  activations_post_processing.ipynb  advance_configs.ipynb  basic_spatial_example.ipynb  config_log.yaml  connectome_backward.ipynb  connectome_forward.ipynb  connectome_forward_neuron_types.ipynb  connectome_ode.ipynb  connectome_ode_example.ipynb  connectome_ode_sunny.ipynb  corrrelated_dots_gif.ipynb  cortical_sheet_test.ipynb  create_connectivity.ipynb  dynamics.ipynb  ei_activations.py  ei_image_classifier_trainer.py  ei_qclevr_trainer.py  ei_tester.py  ei_trainer.py  ei_visualizations.ipynb  modulating_factors.ipynb  ode_train.py  ode_trainer.py  post_processing_activations.ipynb  spatially_embedded_example.ipynb  spmm_test.ipynb  test.ipynb  tester.py  topographical_ode.ipynb  topographical_rnn_benchmark.ipynb  topography_trainer.py  trainer.py  usage.py
install/: index.html
notebooks/: plots_kwargs.yaml  spmm_test.ipynb  test.ipynb
reference/: index.html
requirements/: common.txt  cpu.txt  cu124.txt  dev.txt  osx.txt  sparse_cpu.txt  sparse_cu124.txt  tsgu.txt
search/: search_index.json
slurm_scripts/: trainer.sh
stylesheets/: extra.css
test/: cortical_sheet_test.ipynb  spmm_test.ipynb  spmm_tests.ipynb
testers/: ei_crnn_tester.py
tests/: test_connectome.py  test_crnn.py  test_spatially_embedded.py  test_utils.py
trainers/: classifiers.py  ei_crnn.py  (+6 more)
(+238 files in other folders)
