[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioplnn"
version = "0.0.1"
authors = [
  { name="Valmiki Kothare", email="valmiki.kothare.vk@gmail.com" },
]
description = "A biologically plausible neural network package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hpvok13/bioplnn"
Issues = "https://github.com/hpvok13/bioplnn/issues"