[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bioplnn"
version = "0.0.1"
authors = [{ name = "Valmiki Kothare", email = "valmiki.kothare.vk@gmail.com" }]
description = "A biologically plausible neural network package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "tqdm",
  "torch",
  "torchvision",
  "torch-scatter",
  "torch-sparse",
  "opencv-python",
  "torchsummary",
  "scipy",
  "tabulate",
  "scikit-learn",
  "pandas",
  "matplotlib",
  "accelerate",
  "lightning",
  "hydra-core",
  "hydra-submitit-launcher",
  "addict"
]

[project.urls]
Homepage = "https://github.com/hpvok13/bioplnn"
Issues = "https://github.com/hpvok13/bioplnn/issues"
  