[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioplnn"
version = "0.0.1"
authors = [{ name = "Valmiki Kothare", email = "valmiki.kothare.vk@gmail.com" }]
description = "A biologically plausible neural network package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "torch<=2.5.1",
  "torchvision<=0.20.1",
  "torch-sparse",
  "torch-scatter",
  "torchode",
  "opencv-python",
  "matplotlib",
  "pandas",
]

[project.optional-dependencies]
dev = [
  "addict",
  "gdown",
  "hydra-core",
  "hydra-submitit-launcher",
  "ipykernel",
  "pre-commit",
  "pytest",
  "ruff",
  "scikit-learn",
  "seaborn",
  "tqdm",
  "wandb",
]

[project.urls]
Homepage = "https://github.com/FieteLab/torch-biopl-dev.git"
Issues = "https://github.com/FieteLab/torch-biopl-dev/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
